syntax = "proto3";
package exocore.avs;

import "exocore/avs/tx.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";


option go_package = "github.com/ExocoreNetwork/exocore/x/avs/types";

// QueryAVSInfoReq is the request to query avs related information
message QueryAVSInfoReq {
  // avs_address is the address of avs
  string avs_address = 1 [(gogoproto.customname) = "AVSAddres"];
}

// QueryAVSInfoResponse is the response of avs related information
message QueryAVSInfoResponse {
  // basic information of avs
  AVSInfo info = 1;
}


// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc QueryAVSInfo(QueryAVSInfoReq) returns (QueryAVSInfoResponse) {
    option (google.api.http).get = "/ExocoreNetwork/exocore/avs/QueryAVSInfo";
  }
}